  * Added love.focus callback.
  * Added extra meter parameter to love.physics.newWorld.
  * Added love.graphics.setIcon.
  * Added way to make the window desktop resolution.
  * Added subtractive and multiplicative blend modes.
  * Added body:getAllowSleeping.
  * Added shape:getBody.
  * Added love.filesystem.FileData for public usage.
  * Added base64 support for love.filesystem.FileData.

  * Fixed the debug module not being an upvalue of the error handlers. (you can now override debug)
  * Fixed some cases when love.audio.pause and friends, were acting on everything, not just the passed Source.
  * Fixed setFixedRotation enabling other flags.
  * Fixed a bug in the loader (for require).
  * Fixed ParticleSystem::setSprite not retaining the new image.
  * Fixed setMode removing images settings (wrapping, filters).
  * Fixed shape:getBody, it's now exposed for LÖVE usage.
  * Fixed DistanceJoint:getType() returning "circle" - it now returns "distance".
  * Fixed SpriteBatches being unaffected by setColor
  * Fixed the audio bug.
  * Fixed invalid FSAA values crashing LÖVE.
  * Fixed a bunch of compiler warnings.
  * Fixed OS X not properly using UTIs for .love files.
  * Fixed the modplug decoder not properly handeling files that fail to load.
  * Fixed a memory leak in setFont.
  * Fixed bug where errors in threads wouldn't get picked up by demand.
  * Fixed part of the bug with newlines when scaling text (rotating still messes up the lines).
  * Fixed the bug where newImageFont would try to created ImageData out of ImageData.
  * Fixed error handler not resetting the blend mode.

  * Changed fonts, they're now po2 safe.
  * Changed the traceback in the error screen.
  * Changed font origin to top-left.
  * Changed behavior of love.physics.newWorld(w, h), it now creates a w*h world, not a 4*w*h world.
  * Changed linux save dir location to obey to Freedesktop.org's XDG specs. (~/.local/share/love by default.)

  * Removed font functions from love.graphics.
